--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl_phone_field: ^3.1.0
   smooth_page_indicator: ^1.0.1
   otp_text_field: ^1.1.3
+  firebase_core: ^2.13.0
+  firebase_auth: ^4.6.2
 
 dev_dependencies:
   flutter_test:
