--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   otp_text_field: ^1.1.3
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.2
+  google_sign_in: ^6.1.4
+  animated_splash_screen: ^1.3.0
+  lottie: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +71,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/gifs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
