--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   google_sign_in: ^6.1.4
   animated_splash_screen: ^1.3.0
   lottie: ^2.4.0
+  image_picker: ^0.8.9
+  firebase_storage: ^11.2.3
+  cloud_firestore: ^4.8.0
 
 dev_dependencies:
   flutter_test:
